rendered should not overflow with scrollbar - layout issue fixed - TextRenderBox render logic changed.

--- a/src/styles/uis/math_anno.scss
+++ b/src/styles/uis/math_anno.scss
@@ -92,11 +92,16 @@
     line-height: 1;
   }
 
-  .latex-render-parent {
+  .latex-wrapper {
     padding: 0 10px;
-    margin: auto;
-    margin-left: calc(50% - 50vw);
-    width: 100vw;
+    margin-left: calc(50% - 49vw);
+    width: 98vw;
+    display: flex;
+    justify-content: center;
+  }
+
+
+  .latex-render-parent {
 
     .zoom {
       margin-left: 30px;
